@@ -31,7 +31,9 @@
 	- add sparcv8 and enable elf32/elf64 Zon sparc64 (#117302).
 	- fix: --querybynumber looped.
 	- fix: ENOTSUP filter from lsetfilecon borkage.
-  
+	- fix: increase file context regex parse buffer to BUFSIZ.
+	- fix: handle elf64 note sections correctly.
+
 4.2.1 -> 4.2.2:
 	- unify signal handling in librpmio, use condvar to deliver signal.
 	- make peace with libtool-1.5, autoconf-2.59, automake-1.8.
